fixed some alignment issues.

--- a/static/stylesheet2.css
+++ b/static/stylesheet2.css
@@ -289,20 +289,27 @@
 }
 
 .FOIAParagraph {
-  grid-column-start: 2;
+  margin: 3em;
+  grid-column-start: 1;
   grid-column-end: 5;
 
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: left; */
   height: auto;
   resize: vertical;
   overflow: auto;
 }
 
 .FOIAChart {
+  margin: 1em;
   grid-column-start: 5;
   grid-column-end: 12;
+}
+
+.primaryButton {
+  grid-column-start: 5;
+  grid-column-end: 7;
 }
 
 .primaryButton {
@@ -336,6 +343,9 @@
 }
 
 .buttonText {
+  grid-column-start: 7;
+  grid-column-end: 12;
+
   font-family: sans-serif;
   font-size: 16px;
 }
